--- a/bot/package.json
+++ b/bot/package.json
@@ -12,7 +12,8 @@
     "telegraf": "^4.15.0",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
