--- a/bot/package.json
+++ b/bot/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
